# hummingbot

./: .gitignore  README.md
Gazebo/Model/Hummingbot_v1_0_1/: model.config  model.sdf
Gazebo/Model/hummingbot/: model-1_5.sdf  model.config  model.sdf  model_1.0.sdf
Gazebo/Model/hummingbot/hummingbot/: .model.sdf.swp  model-1_5.sdf
Gazebo/Plugins/: hummingbot_plugin.cc  hummingbot_test.world  package.xml
Gazebo/Plugins/camera_publisher/: CMakeLists.txt  camera_sensor_plugin.cc  hummingbot_test.world  package.xml
Gazebo/Plugins/wheel_control/: CMakeLists.txt  hummingbot_plugin.cc  package.xml
ROS/hummingbot/: CMakeLists.txt  package.xml
ROS/hummingbot/launch/: hummingbot.launch  motor.launch  real_world.launch  real_world_remote.launch  remote.launch  simulation.launch  simulation_remote.launch
ROS/hummingbot/launch/test/: hummingbot.test
ROS/hummingbot/scripts/Rover/: camera.py  joystick.py  motor_control.py  rover.py  rover_teleop.py
ROS/hummingbot/scripts/Test/: publisher_node.py  test_node.py
